[gd_scene load_steps=10 format=3 uid="uid://ch1iq7cygkru2"]

[ext_resource type="Script" uid="uid://dwm58yf7niht0" path="res://scripts/tests/test_animation_viewer.gd" id="1_viewer"]
[ext_resource type="Script" uid="uid://dg2obkxmhp4v2" path="res://scripts/tests/orbit_camera.gd" id="2_orbit_camera"]
[ext_resource type="PackedScene" uid="uid://q1gu5hkhk1ai" path="res://assets/characters/vanguard/vanguard.glb" id="3_character"]
[ext_resource type="Script" uid="uid://dg33nhpmacdpl" path="res://scripts/characters/character_base.gd" id="4_character_base"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_char"]
radius = 0.3
height = 1.8

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.08, 0.08, 0.12, 1)
ambient_light_source = 2
ambient_light_color = Color(0.3, 0.35, 0.5, 1)
ambient_light_energy = 0.4
tonemap_mode = 3
tonemap_exposure = 1.1
tonemap_white = 6.0
glow_enabled = true
glow_intensity = 0.5
glow_strength = 1.2
glow_bloom = 0.1
glow_hdr_threshold = 0.8

[sub_resource type="PlaneMesh" id="PlaneMesh_1"]
size = Vector2(20, 20)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_1"]
albedo_color = Color(0.15, 0.15, 0.18, 1)
metallic = 0.1
roughness = 0.7

[sub_resource type="BoxShape3D" id="BoxShape3D_floor"]
size = Vector3(20, 0.1, 20)

[node name="TestAnimationViewer" type="Node3D"]
script = ExtResource("1_viewer")

[node name="CharacterBody" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.025291145, 0)
script = ExtResource("4_character_base")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.9, 0)
shape = SubResource("CapsuleShape3D_char")

[node name="CharacterModel" parent="CharacterBody" instance=ExtResource("3_character")]

[node name="OrbitCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.5, 0.866025, 0, -0.866025, 0.5, 0, 5.2, 3)
fov = 50.0
script = ExtResource("2_orbit_camera")
distance = 8.0
initial_vertical_angle = 60.0

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.25, 0.433013, 0, 0.866025, 0.5, -0.5, -0.433013, 0.75, 5, 10, 5)
light_color = Color(1, 0.95, 0.9, 1)
light_energy = 1.8
shadow_enabled = true
directional_shadow_blend_splits = true
directional_shadow_max_distance = 30.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="FillLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 2, 0)
light_color = Color(0.7, 0.8, 1, 1)
light_energy = 0.6
light_specular = 0.0
omni_range = 8.0
omni_attenuation = 1.5

[node name="SideLight" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 1.5, -1)
light_color = Color(0.85, 0.85, 0.9, 1)
light_energy = 0.5
light_specular = 0.0
omni_range = 6.0
omni_attenuation = 1.5

[node name="RimLight" type="SpotLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.87, -0.5, 0, 0.5, 0.87, 0, 4, -5)
light_color = Color(0.9, 0.95, 1, 1)
light_energy = 2.5
light_specular = 1.0
spot_range = 12.0
spot_angle = 35.0

[node name="Floor" type="StaticBody3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Floor"]
mesh = SubResource("PlaneMesh_1")
surface_material_override/0 = SubResource("StandardMaterial3D_1")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Floor"]
shape = SubResource("BoxShape3D_floor")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -220.0
offset_bottom = 400.0
grow_horizontal = 0

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Panel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 8
